# Boiler_plate

./: .gitignore  Dockerfile  README.md  adv_rebuild.py  blog.md  demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hub.yml
outputs/: agent_project_knowledge.json  eval_results.json  grpo_smoke_metrics.json  llm_baseline_metrics_limit30.json  llm_baseline_metrics_small.json
outputs/releaseops-grpo-smoke/: README.md
outputs/releaseops-grpo-smoke/checkpoint-6/: config.json  generation_config.json  tokenizer_config.json  trainer_state.json
releaseops_arena/: baselines.py  client.py  eval_api.py  models.py  proposals.py  safety_rules.py  scenario_builder.py  server.py  tool_env.py  workers.py
server/: app.py
src/: __init__.py  baseline.py  env.py  main.py  models.py  tasks.py
tests/: test_tool_env.py
training/: evaluate.py  evaluate_llm_baseline.py  make_dataset.py  plot_metrics.py  train_grpo.py
training/data/: eval.jsonl  eval_seen.jsonl  eval_unseen.jsonl  train.jsonl
